# kata

./: .gitignore
esolang/boolfuck/: LINK  boolfuck.go  boolfuck_test.go
esolang/smallfuck/: LINK  README.md  smallfuck.cabal
esolang/smallfuck/app/: Main.hs
esolang/smallfuck/src/: Lib.hs
esolang/smallfuck/test/: Spec.hs
esolang/ticker/: LINK  ticker.cabal
esolang/ticker/app/: Main.hs
esolang/ticker/src/: Lib.hs
esolang/ticker/test/: Spec.hs
factorial-tail/: LINK  factorial_tail.py
huffman/: Huffman.hs  LINK  Spec.hs
point-in-poly/: LINK  PointInPoly.hs  Spec.hs
recurrence-relation/: Eval.hs  LINK
rule30/: LINK  Main.hs  Rule30.hs
tagless-final/: LINK  Spec.hs  Tagless.hs
text-align-justify/: LINK  Spec.hs  TextAlignJustify.hs
vending-machine/: LINK  vending-machine.js
