name:                ticker
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Junjia He
maintainer:          edfward@gmail.com
copyright:           2017 Junjia He
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

executable ticker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ticker
  default-language:    Haskell2010

test-suite ticker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ticker
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
